--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pulse Engine</title>
+    <title>Pulse&trade;</title>
     <base href="/">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/pulse.ico">
     <!-- <link href="app/login-screen/login-screen.component.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">-->
 
