--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pulse&trade;</title>
+    <!-- <title>WISESOPHIA WS</title> -->
     <base href="/">
     <link rel="icon" type="image/x-icon" href="assets/images/pulse.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="assets/images/asp.ico"> -->
     <!-- <link href="app/login-screen/login-screen.component.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">-->
 
